spacing bug fixed

--- a/src/app/dashboard/component/note-list/note-list.component.css
+++ b/src/app/dashboard/component/note-list/note-list.component.css
@@ -16,8 +16,8 @@
 
 @media(max-width:700px) {
   .fab-container {
-    bottom: 20px;
-    right: 20px;
+    bottom: 70px;
+    right: 10px;
   }
 }
 
